# APM-Projet

Eleves/data/: gg_simple-3x3.data
Eleves/inc/: types.h  wfc.h
Eleves/output/: grid-3x3.1.save  grid-3x3.5.save  simple-5x5.1.save
Eleves/src/: load_save.c  main.c  wfc.c
Eleves/src/solvers/: sudoku_cpu.c  sudoku_omp.c  sudoku_target.c
Eleves_cuda/: CMakeLists.txt
Eleves_cuda/data/: grid-3x3.data  simple-5x5.data
Eleves_cuda/inc/: md5.h  types.h  wfc.h
Eleves_cuda/src/: args.cu  load_save.cu  main.cu  md5.cu  wfc.cu
Eleves_cuda/src/solvers/: sudoku_cpu.cu  sudoku_cuda.cu  sudoku_cuda.h  sudoku_omp.cu  sudoku_omp.h  sudoku_target.cu
cpu_complete/Eleves/: CMakeLists.txt
cpu_complete/Eleves/data/: gg_same_col-5x5.data  grid-3x3.data
cpu_complete/Eleves/inc/: types.h  wfc.h
cpu_complete/Eleves/src/: load_save.c  main.c  wfc.c
cpu_complete/Eleves/src/solvers/: sudoku_cpu.c  sudoku_omp.c  sudoku_target.c
